Fixed reset padding to prevent distortion.

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -194,7 +194,8 @@ $color-secondary: #c4c4c4;
 
   .flickity-page-dots,
   .flickity-prev-next-button {
-    margin: 0
+    margin: 0;
+    padding: 0;
   }
 
   .flickity-prev-next-button,
